--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "react-boilerplate",
   "version": "0.0.1",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com:allenzhong/react-boilerplate.git"
+  },
+  "keywords": [],
+  "description": ""
 }
