--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-merge": "^5.1.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.10.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
