--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "webpack --config webpack.config.prod.js",
     "dev": "webpack-dev-server --open --config webpack.config.dev.js",
     "dev:hot": "npm run dev -- --hot",
-    "test": "jest"
+    "test": "jest",
+    "format": "pretty-quick"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,8 @@
     "css-loader": "^4.2.1",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.2",
+    "prettier": "^2.1.0",
+    "pretty-quick": "^3.0.0",
     "react-hot-loader": "^4.12.21",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
