--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest": "^26.4.2",
     "prettier": "^2.1.0",
     "pretty-quick": "^3.0.0",
+    "react-axe": "^3.5.3",
     "react-hot-loader": "^4.12.21",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
